# langchain_obs

deep-agents-from-scratch-main/: CLAUDE.md
deep-agents-from-scratch-main/notebooks/: 0_create_agent.ipynb  1_todo.ipynb
intro-to-langsmith-main/: langsmithdoc copy.xml  langsmithdoc.xml  pyproject.toml
intro-to-langsmith-main/notebooks/module_1/: alternative_tracing_methods.ipynb  conversational_threads.ipynb  tracing_basics.ipynb  types_of_runs.ipynb  utils.py
lca-langchainV1-essentials-main/python/: L1_fast_agent.ipynb  L2_messages.ipynb  L3_streaming.ipynb  L4_tools.ipynb  L5_tools_with_mcp.ipynb  L6_memory.ipynb  L6_memory_postgres.ipynb  L7_structuredOutput.ipynb  L8_dynamic.ipynb  L8_dynamic_sysprompt.ipynb  l6_memory_postgresql_notebook_654dd589.plan.md  pyproject.toml  requirements.txt
lca-langgraph-essentials-main/python/: L1_nodes.ipynb  L2_edges_my.ipynb  L3-L4_cedges_memory.ipynb  L5_interrupt.ipynb  L5_interrupt_my.ipynb  L7_structured_ouput.ipynb  L8_prompt_chaining.ipynb  l3-l4_mylearn.ipynb
